<resources>
    <string name="app_name">Unit Converter App</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="value">Value</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="enter_a_value">Enter a value</string>
    <string name="unit_converter">Unit Converter</string>
    <string-array name="temperatureType">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
</resources>
