<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.t00063414.unitconverterapp.MainActivity">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fromSpinner"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="52dp"
        android:entries="@array/temperatureType"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toSpinner"
        android:entries="@array/temperatureType"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/fromSpinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:id="@+id/textView"
        android:layout_marginStart="41dp"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/fromSpinner"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:layout_above="@+id/toSpinner"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:id="@+id/converterButton"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/userValue"
        android:layout_alignStart="@+id/textView2"
        android:onClick="convertTemperature"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/userValue"
        android:hint="Enter a value"
        android:textColorHint="@color/hintColor"
        android:layout_below="@+id/toSpinner"
        android:layout_toEndOf="@+id/converterButton"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:id="@+id/textView3"
        android:textSize="30sp"
        android:textColor="@color/valueColor"
        android:layout_above="@+id/converterButton"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/resultText"
        android:textSize="30sp"
        android:textColor="@color/resultColor"
        android:layout_alignTop="@+id/converterButton"
        android:layout_alignStart="@+id/toSpinner" />
</RelativeLayout>
